[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "css-ts-tools"
version = "0.3.0"
description = "Local setup tooling for @kt-tools/css-ts"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.7",
  "rich>=13.7.0",
]

[project.scripts]
css-ts-setup = "tools.css_ts_setup:cli"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
